--- a/src/sd3_inclass.vcxproj.filters
+++ b/src/sd3_inclass.vcxproj.filters
@@ -17,6 +17,7 @@
     <ClCompile Include="core\log.cpp" />
     <ClCompile Include="render\rhi\vertexbuffer.cpp" />
     <ClCompile Include="core\image.cpp" />
+    <ClCompile Include="render\rhi\sampler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game\game_config.h" />
@@ -42,5 +43,6 @@
     <ClInclude Include="render\rhi\vertexbuffer.h" />
     <ClInclude Include="core\external\stb_image.h" />
     <ClInclude Include="core\image.h" />
+    <ClInclude Include="render\rhi\sampler.h" />
   </ItemGroup>
 </Project>
