--- a/src/sd3_inclass.vcxproj
+++ b/src/sd3_inclass.vcxproj
@@ -347,6 +347,7 @@
     <ClCompile Include="game\game.cpp" />
     <ClCompile Include="game\simplerenderer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="render\rhi\constantbuffer.cpp" />
     <ClCompile Include="render\rhi\dx11.cpp" />
     <ClCompile Include="core\file.cpp" />
     <ClCompile Include="render\rhi\rasterstate.cpp" />
@@ -372,6 +373,7 @@
     <ClInclude Include="game\game.h" />
     <ClInclude Include="game\game_config.h" />
     <ClInclude Include="game\simplerenderer.h" />
+    <ClInclude Include="render\rhi\constantbuffer.h" />
     <ClInclude Include="render\rhi\dx11.h" />
     <ClInclude Include="core\file.h" />
     <ClInclude Include="render\rhi\rasterstate.h" />
