--- a/src/sd3_inclass.vcxproj.filters
+++ b/src/sd3_inclass.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClCompile Include="render\vertex.cpp" />
     <ClCompile Include="render\rhi\blendstate.cpp" />
     <ClCompile Include="render\matrix.cpp" />
+    <ClCompile Include="render\rhi\depthstencilstate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game\game_config.h" />
@@ -53,5 +54,6 @@
     <ClInclude Include="render\rhi\constantbuffer.h" />
     <ClInclude Include="render\rhi\blendstate.h" />
     <ClInclude Include="render\matrix.h" />
+    <ClInclude Include="render\rhi\depthstencilstate.h" />
   </ItemGroup>
 </Project>
