--- a/src/sd3_inclass.vcxproj.filters
+++ b/src/sd3_inclass.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClCompile Include="render\rhi\blendstate.cpp" />
     <ClCompile Include="render\matrix.cpp" />
     <ClCompile Include="render\rhi\depthstencilstate.cpp" />
+    <ClCompile Include="core\vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game\game_config.h" />
@@ -55,5 +56,6 @@
     <ClInclude Include="render\rhi\blendstate.h" />
     <ClInclude Include="render\matrix.h" />
     <ClInclude Include="render\rhi\depthstencilstate.h" />
+    <ClInclude Include="core\vector.h" />
   </ItemGroup>
 </Project>
